--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body {
 a{
   text-decoration: none;
 }
+/* just first letter capitale */
+.capitalize::first-letter {
+    text-transform: uppercase !important;
+}
 
 
 .btn-primary {
