--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body {
   background-color: #fff;
   background-image: url(/SiteReservation/assets/background.png);
   background-attachment: fixed;
+  background-size:contain;
 }
 
 /* Typography */
