--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
   background-color: #fff;
   background-image: url(/SiteReservation/assets/background.png);
   background-attachment: fixed;
+  background-size: cover;
 }
 
 /* Typography */
